adding about us page

--- a/faq_page.html
+++ b/faq_page.html
@@ -25,16 +25,16 @@
             <li class="menu-item dropdown">
                 <a href="#" class="item">Mais</a>
                 <ul class="dropdown-content">
-                    <li class="sub-menu-item"><a href="#">Sobre nós</a></li>
+                    <li class="sub-menu-item"><a href="./sobre_nos_page.html">Sobre nós</a></li>
                     <li class="sub-menu-item"><a href="#">Serviços</a></li>
-                    <li class="sub-menu-item"><a href="#">FAQ</a></li>
+                    <li class="sub-menu-item"><a href="./faq_page.html">FAQ</a></li>
                 </ul>
             </li>
         </ul>
     </header>
     <h1 id="title">Perguntas frequentes - NavTour</h1>
     <div class="faq-content">
-        <ol type="1">
+        <ul>
             <li>
                 <h2>Quais tipos de eventos são realizados em Fortaleza?</h2>
                 <p>Em Fortaleza, você pode encontrar uma variedade de eventos culturais, como festivais de música, exposições de arte, peças de teatro, eventos esportivos e muito mais.</p>
@@ -71,7 +71,7 @@
                 <h2>Os eventos são adequados para todas as idades?</h2>
                 <p>A maioria dos eventos em Fortaleza é projetada para serem desfrutados por pessoas de todas as idades. No entanto, alguns eventos podem ser mais adequados para determinadas faixas etárias. Recomendamos verificar a descrição do evento para determinar sua adequação para diferentes faixas etárias.</p>
             </li>
-        </ol>
+        </ul>
     </div>
 </body>
 </html>
