--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li class="menu-item dropdown">
                 <a href="#" class="item">Mais</a>
                 <ul class="dropdown-content">
-                    <li class="sub-menu-item"><a href="#">Sobre nós</a></li>
+                    <li class="sub-menu-item"><a href="./sobre_nos_page.html">Sobre nós</a></li>
                     <li class="sub-menu-item"><a href="#">Serviços</a></li>
                     <li class="sub-menu-item"><a href="./faq_page.html">FAQ</a></li>
                 </ul>
